# LC29H_python

./: .gitignore  pyproject.toml
.github/workflows/: python_cicd_units.yml
lc29h/: __version__.py
lc29h/script/: get_stream.py
lc29h/utils/: checksum.py
tests/: test_checksum.py
